--- a/config/joints.yaml
+++ b/config/joints.yaml
@@ -6,21 +6,17 @@ joint_state_controller:
 # Position Controllers ---------------------------------------
 joint1_position_controller:
   type: effort_controllers/JointPositionController
-  joint: base_link__link_01
+  joint: base_link_link_01
   pid: {p: 2000.0, i: 100, d: 500.0}
 joint2_position_controller:
   type: effort_controllers/JointPositionController
-  joint: link_01__link_02
+  joint: link_01_link_02
   pid: {p: 50000.0, i: 100, d: 2000.0}
 joint3_position_controller:
   type: effort_controllers/JointPositionController
-  joint: link_02__link_03
+  joint: link_02_link_03
   pid: {p: 20000.0, i: 50, d: 1000.0}
 joint4_position_controller:
   type: effort_controllers/JointPositionController
-  joint: link_03__link_04
+  joint: link_03_gripper
   pid: {p: 2000.0, i: 50, d: 200.0}
-joint5_position_controller:
-  type: effort_controllers/JointPositionController
-  joint: link_04__link_05
-  pid: {p: 700.0, i: 50, d: 70.0}
