--- a/config/joints.yaml
+++ b/config/joints.yaml
@@ -20,3 +20,7 @@ joint4_position_controller:
   type: effort_controllers/JointPositionController
   joint: link_03_link_04
   pid: {p: 2000.0, i: 50, d: 200.0}
+joint5_position_controller:
+  type: effort_controllers/JointPositionController
+  joint: link_04_link_05
+  pid: {p: 2000.0, i: 50, d: 200.0}
